Corrected some codes

--- a/Robot_Path.ipynb
+++ b/Robot_Path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b46c9e0f",
+   "id": "474f2400",
    "metadata": {},
    "source": [
     "### This program is designed to find the shortest path and the fastest path (using Euclidean Distance as a heuristic function) for a robot starting from a designated start point on the grid to a designated end point. "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 124,
    "id": "4c8e7187",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
     "                for column in range(len(self.matrix[rows])):\n",
     "                    if str(self.matrix[rows][column]) != str(line[column]):\n",
     "                        point = (rows,column)\n",
-    "                        print(\"Error at \" + str(point) + \" of grid.\")\n",
+    "                        print(\"Error detected\")\n",
     "                        return\n",
     "            print(\"All correct\")\n",
     "            return"
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 119,
    "id": "ee8cd212",
    "metadata": {
     "scrolled": true
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "id": "77233c18",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 121,
    "id": "72ae452a",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error at (3, 7) of grid.\n"
+      "Error detected\n"
      ]
     }
    ],
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 122,
    "id": "1880914c",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 123,
    "id": "ebfeaf43",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "52cf2250",
+   "id": "120cf5f2",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0f7823eb",
+   "id": "8be44dfa",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "02061411",
+   "id": "0443cb19",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "54ff0e68",
+   "id": "e6cc0abf",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7b530a",
+   "id": "7a68742d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a3a36e",
+   "id": "85250982",
    "metadata": {},
    "outputs": [],
    "source": []
